--- a/conditions.html
+++ b/conditions.html
@@ -1,18 +1,68 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Conditions générales d’utilisation</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Conditions Générales d’Utilisation – Mobydico</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      color: #111;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #444;
+    }
+    ul {
+      margin-left: 1.5rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Conditions générales d’utilisation</h1>
-  <p>Bienvenue sur Mobydico. En utilisant cette application, vous acceptez les conditions suivantes :</p>
+  <h1>📝 Conditions Générales d’Utilisation – Mobydico</h1>
+  <p><strong>Date de mise à jour :</strong> 1er juin 2025</p>
+
+  <h2>1. Respect des autres et du cadre légal</h2>
+  <p>Mobydico est une plateforme de libre expression entre utilisateurs. Cependant, la liberté d’expression ne signifie pas liberté de nuire.</p>
+  <p>Il est strictement interdit de publier :</p>
   <ul>
-    <li>Respecter les autres utilisateurs</li>
-    <li>Ne pas publier de contenu illégal ou nuisible</li>
-    <li>Mobydico se réserve le droit de supprimer tout contenu signalé</li>
-    <li>Les comptes peuvent être suspendus en cas d'abus</li>
+    <li>Des propos haineux, discriminatoires, violents ou menaçants</li>
+    <li>Du contenu à caractère sexuel explicite ou choquant</li>
+    <li>Du harcèlement ou des attaques personnelles</li>
+    <li>Des contenus contraires aux lois françaises ou européennes</li>
   </ul>
-  <p>Pour toute question, contactez-nous à contact@mobydico.com.</p>
+
+  <h2>2. Signalement et modération</h2>
+  <ul>
+    <li>Tout utilisateur peut signaler un contenu qu’il juge inapproprié.</li>
+    <li>L’équipe de Mobydico s’engage à examiner chaque signalement dans un délai de 24 heures.</li>
+    <li>En cas de violation, le contenu pourra être supprimé sans préavis, et le compte suspendu ou supprimé.</li>
+  </ul>
+
+  <h2>3. Comportement des utilisateurs</h2>
+  <ul>
+    <li>Les utilisateurs sont responsables de ce qu’ils publient.</li>
+    <li>Mobydico propose une fonction pour bloquer un autre utilisateur. Une fois bloqué, cet utilisateur ne pourra plus vous contacter ni voir vos publications.</li>
+  </ul>
+
+  <h2>4. Suppression de compte</h2>
+  <p>Vous pouvez à tout moment supprimer votre compte depuis l’application. Cela supprimera vos données utilisateur associées.</p>
+
+  <h2>5. Contenus tiers</h2>
+  <p>Les liens partagés par les utilisateurs (ex. vidéos YouTube, articles, etc.) relèvent de la responsabilité de leur auteur. Mobydico ne garantit pas l’exactitude ou la légalité de ces contenus.</p>
+
+  <h2>6. Modification des conditions</h2>
+  <p>Mobydico se réserve le droit de modifier ces conditions à tout moment. Les utilisateurs seront informés en cas de changement important.</p>
+
+  <h2>7. Contact</h2>
+  <p>Pour toute question ou demande d’assistance, vous pouvez nous contacter à : <strong>contact@mobydico.com</strong></p>
 </body>
 </html>
