--- a/conditions.html
+++ b/conditions.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <h1>📝 Conditions Générales d’Utilisation – Mobydico</h1>
+  <h1>Conditions Générales d’Utilisation – Mobydico</h1>
   <p><strong>Date de mise à jour :</strong> 1er juin 2025</p>
 
   <h2>1. Respect des autres et du cadre légal</h2>
