--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/moby-logo.png" alt="MobyDico Logo" class="logo">
+    <img src="assets/mobydico-logo.png" alt="MobyDico Logo" class="logo">
     <h1>Bienvenue sur MobyDico</h1>
     <p>Exprimez-vous librement sur les sujets du jour. Une appli pour lire, écrire et débattre. 
     L’actu vue par ceux qui la vivent.</p>
