--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <div class="container">
     <img src="assets/mobydico-logo.png" alt="MobyDico Logo" class="logo">
     <h1>Bienvenue sur MobyDico</h1>
-    <p>Exprimez-vous librement sur les sujets du jour. Une appli pour lire, écrire et débattre. 
-    L’actu vue par ceux qui la vivent.</p>
+    <p>Exprimez-vous librement sur les sujets du jour. Une appli pour lire, écrire et débattre.</p>
+    <p>L’actu vue par ceux qui la vivent.</p>
     <div class="links">
       <a href="/confidentialite">Confidentialité</a>
       <a href="/conditions">Conditions</a>
