--- a/conditions.html
+++ b/conditions.html
@@ -11,18 +11,18 @@
       padding: 2rem;
       max-width: 800px;
       margin: auto;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #13AAAB;
+      color: #fff;
     }
-    h1 {
-      color: #111;
-    }
-    h2 {
-      margin-top: 2rem;
-      color: #444;
+    h1, h2 {
+      color: #fff;
     }
     ul {
       margin-left: 1.5rem;
+    }
+    a {
+      color: #ffffff;
+      text-decoration: underline;
     }
   </style>
 </head>
