--- a/confidentialite.html
+++ b/confidentialite.html
@@ -3,8 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Politique de confidentialité — Mobydico</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body {
+      max-width: 700px;
+      margin: 2rem auto;
+      font-family: sans-serif;
+      line-height: 1.6;
+      background-color: #13AAAB;
+      color: #ffffff;
+      padding: 2rem;
+    }
+    h1, h2 {
+      color: #ffffff;
+    }
+    ul {
+      margin-left: 1.5rem;
+    }
+    a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
+    hr {
+      border-color: rgba(255, 255, 255, 0.2);
+    }
+  </style>
 </head>
-<body style="max-width: 700px; margin: 2rem auto; font-family: sans-serif; line-height: 1.6;">
+<body>
   <h1>Politique de confidentialité — Mobydico</h1>
   <p><strong>Dernière mise à jour :</strong> 26 mai 2025</p>
 
