--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     .links a:hover {
       background-color: #e0f7f7;
     }
+    .contact {
+      margin-top: 60px;
+      font-size: 1em;
+    }
+    .contact a {
+      color: #fff;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -51,8 +59,12 @@
     <p>Exprimez-vous librement sur les sujets du jour. Une appli pour lire, écrire et débattre.</p>
     <p>L’actu vue par ceux qui la vivent.</p>
     <div class="links">
-      <a href="/confidentialite">Confidentialité</a>
-      <a href="/conditions">Conditions</a>
+      <a href="/confidentialite.html">Confidentialité</a>
+      <a href="/conditions.html">Conditions</a>
+    </div>
+
+    <div class="contact">
+      <p>📧 Contactez-nous : <a href="mailto:contact@mobydico.com">contact@mobydico.com</a></p>
     </div>
   </div>
 </body>
