--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     img.logo {
       width: 200px;
       height: auto;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
     }
     h1 {
       font-size: 2.5em;
@@ -38,6 +38,8 @@
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
+      width: 180px;
+      text-align: center;
     }
     .links a:hover {
       background-color: #e0f7f7;
