--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="contact">
-      <p>📧 Contactez-nous : <a href="mailto:contact@mobydico.com">contact@mobydico.com</a></p>
+      <p>📧 Contactez-nous pour toute question ou assistance : <a href="mailto:contact@mobydico.com">contact@mobydico.com</a></p>
     </div>
   </div>
 </body>
