--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="vc7jmPiHt2PDajW5FPc0UCHO5NBxjn7dbU_ZMCN-jVQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MobyDico</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
