--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
       color: #fff;
       text-decoration: underline;
     }
+    .store-buttons {
+      margin-top: 40px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    .store-badge {
+      height: 50px;
+      transition: transform 0.2s ease;
+    }
+    .store-badge:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
@@ -66,7 +80,14 @@
       <a href="/confidentialite.html">Confidentialité</a>
       <a href="/conditions.html">Conditions</a>
     </div>
-
+  <div class="store-buttons">
+    <a href="#" target="_blank">
+      <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Télécharger sur l’App Store" class="store-badge">
+    </a>
+    <a href="#" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Disponible sur Google Play" class="store-badge">
+    </a>
+  </div>
     <div class="contact">
       <p>📧 Contactez-nous pour toute question ou assistance : <a href="mailto:contact@mobydico.com">contact@mobydico.com</a></p>
     </div>
