--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     }
     .store-badge {
       height: 50px;
+      width: 160px;
       transition: transform 0.2s ease;
     }
     .store-badge:hover {
