--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
     .store-buttons {
       margin-top: 20px;
-      margin-top: 80px;
+      margin-button: 80px;
       display: flex;
       justify-content: center;
       gap: 20px;
@@ -64,7 +64,7 @@
     }
     .store-badge {
       height: 50px;
-      width: 200px;
+      width: 300px;
       transition: transform 0.2s ease;
     }
     .store-badge:hover {
