--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
     .store-buttons {
       margin-top: 20px;
-      margin-button: 80px;
+      margin-bottom: 80px;
       display: flex;
       justify-content: center;
       gap: 20px;
