--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     <p>Exprimez-vous librement sur les sujets du jour. Une appli pour lire, écrire et débattre.</p>
     <p>L’actu vue par ceux qui la vivent.</p>
     <div class="store-buttons">
-      <a href="#" target="_blank">
+      <a href="https://apps.apple.com/fr/app/mobydico/id6745028443" target="_blank" rel="noopener">
         <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Télécharger sur l’App Store" class="store-badge">
       </a>
-      <a href="#" target="_blank">
+      <a href="#" target="_blank" rel="noopener">
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Disponible sur Google Play" class="store-badge">
       </a>
     </div>
