--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <a href="https://apps.apple.com/fr/app/mobydico/id6745028443" target="_blank" rel="noopener">
         <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Télécharger sur l’App Store" class="store-badge">
       </a>
-      <a href="#" target="_blank" rel="noopener">
+      <a href="https://play.google.com/store/apps/details?id=com.sleekstar.mobydico&pcampaignid=web_share" target="_blank" rel="noopener">
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Disponible sur Google Play" class="store-badge">
       </a>
     </div>
